<resources>
    <string name="app_name">ShoeStore</string>
    <string name="text_login">Login</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_welcome_msg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue sapien id cursus molestie. Nunc et quam eu ipsum vestibulum laoreet. Sed egestas, orci ut vehicula accumsan, velit lorem elementum erat, id ultrices libero nisl vel lectus. Mauris quis dictum metus. Phasellus posuere nulla eu felis ullamcorper dignissim. Mauris eleifend ut mi ut mattis. Curabitur mattis, lacus eget luctus consequat, sem odio condimentum velit, eget fringilla nisl velit vel orci. Praesent iaculis dictum nulla, non fringilla sapien dictum ac. Pellentesque ac ullamcorper diam, vitae semper eros. Morbi eget pulvinar arcu. Vivamus sollicitudin nulla consectetur, venenatis urna nec, scelerisque quam. Quisque ut dictum orci. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc tristique ac nunc et hendrerit. Duis purus nibh, rutrum vel mi sit amet, semper malesuada nisl. Maecenas ornare ultrices quam non mattis.</string>
    <string name="string_get_started">Get started</string>
    <string name="text_go_to_shop">Go to Shop</string>
    <string name="text_instructions">Instructions</string>
    <string name="text_instruction_msg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="text_submit">Submit</string>
    <string name="text_logout">Logout</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_save">Save</string>
    <string name="placeholder_shoe_label">Shoe label</string>
    <string name="shoe_name">Shoe name</string>
    <string name="text_company">Company</string>
    <string name="text_shoe_size">Shoe size</string>
    <string name="text_description">Description</string>
    <string name="text_enter_shoe_details">Enter shoe details</string>
</resources>
