<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_enter_shoe_details"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_label" />

        <EditText
            android:id="@+id/shoe_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/text_company"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/shoe_name"
            app:layout_constraintStart_toStartOf="@+id/shoe_name"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name" />

        <EditText
            android:id="@+id/shoe_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/text_shoe_size"
            android:inputType="number"
            android:minHeight="48dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/shoe_company"
            app:layout_constraintStart_toStartOf="@+id/shoe_company"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company" />

        <EditText
            android:id="@+id/shoe_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/text_description"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/shoe_size"
            app:layout_constraintStart_toStartOf="@+id/shoe_size"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_cancel"
            app:layout_constraintStart_toStartOf="@+id/shoe_description"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/text_save"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel"
            app:layout_constraintEnd_toEndOf="@+id/shoe_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>