<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    it was logical to use linearlayout with vertical orientation and gravity center horizontal/vertical,
 since view elements are positioned one after another vertically.-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instr_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text_instructions"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/instr_text_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text_instruction_msg"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/go_to_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_go_to_shop" />
    </LinearLayout>
</layout>